--- a/app/scss/util/mixins.scss
+++ b/app/scss/util/mixins.scss
@@ -2,7 +2,8 @@
 
 @mixin cardImageBg ($title){
   .card_image--#{$title} {
-    background: url('/images/icon-#{$title}.svg') var(colors-background-#{$title}) no-repeat 90% -5px;
+    background: var(colors-background-#{$title}) no-repeat 90% -5px;
+    background-image: url('/images/icon-#{$title}.svg');
     height: 95px;
     margin-bottom: -50px;
     border-radius: rem(10);
