--- a/app/scss/util/mixins.scss
+++ b/app/scss/util/mixins.scss
@@ -2,8 +2,7 @@
 
 @mixin cardImageBg ($title){
   .card_image--#{$title} {
-    background: var(colors-background-#{$title}) no-repeat 90% -5px;
-    background-image: url('/images/icon-#{$title}.svg');
+    background: url('FEM-time-tracking-dashboard/images/icon-#{$title}.svg') var(colors-background-#{$title}) no-repeat 90% -5px;
     height: 95px;
     margin-bottom: -50px;
     border-radius: rem(10);
@@ -21,4 +20,5 @@
     @content;
   }
 }
+
 
