--- a/app/scss/util/mixins.scss
+++ b/app/scss/util/mixins.scss
@@ -2,7 +2,11 @@
 
 @mixin cardImageBg ($title){
   .card_image--#{$title} {
-    background: url(../../../images/icon-#{$title}.svg) var(colors-background-#{$title}) no-repeat 90% -5px;
+    // background: url(../../../images/icon-#{$title}.svg) var(colors-background-#{$title}) no-repeat 90% -5px;
+    background-color: var(colors-background-#{$title});
+    background-image: url(../../../images/icon-#{$title}.svg);
+    background-repeat: no-repeat;
+    background-position: 90% -5px;
     height: 95px;
     margin-bottom: -50px;
     border-radius: rem(10);
